# pddlval

./: MANIFEST.in  NOTICE  README.md  pyproject.toml
pddlval/: __init__.py  main.py
pddlval/binaries/: README.md
tests/: tests.py
tests/domains/: invalid.pddl  valid.pddl
tests/plans/: invalid1.txt  invalid2.txt  invalid3.txt  valid.txt
tests/problems/: invalid.pddl  valid.pddl
